# voicebox_auto

./: .gitignore  README.md  pyproject.toml
src/: tts.py
